+------------------------------------------------------------------------------+
pould v0.6.1.9000 date: 6-27-2018
  -Updated LDWrap() documentation to include caveats regarding the analysis of 
   unusual and truncated allele names.
  -Added package versioning to the README.md document. 
   
+------------------------------------------------------------------------------+
pould v0.6.0.9000 date: 6-6-2018
  -Added the LD.sign.test() function.
  -Updated documentation to reflect this addition.
  -Corrected a typo in 5-18-2018 News entry.
  
+------------------------------------------------------------------------------+
pould v0.5.0.9000 date: 5-18-2018
  -Modified LDWrap() to avoid calling cALD() for locus pairs in which at least
   one locus is monomorphic. In these cases, the *LD_results.csv file identifies
   which loci were monomorphic for that locus pair.
  -Updated documentation to reflect this.

+------------------------------------------------------------------------------+
pould v0.4.2.9000 date: 5-12-2018
  -Streamlined the integration of cALD() into LDWrap().
  
+------------------------------------------------------------------------------+
pould v0.4.1.9000 date: 5-11-2018
  -Updated the Vignette and ReadMe file to correct versioning, punctuation and 
   spelling errors, and elaborate on documentation for cALD()'s report of the
   number of haplotypes. 

+------------------------------------------------------------------------------+
pould v0.4.0.9000 date: 5-8-2018
  -Added the number of haplotypes evaluated to the values returned by cALD(),  
   and thereby to the content of the *LD_results.csv file generated by LDWrap().
  -Updated the documentation to reflect this.
  
+------------------------------------------------------------------------------+
pould v0.3.0.9000 date: 5-3-2018
  -Revised drb1.dqb1.demo so that it represents phased DRB1~DQB1 data pulled 
   directly from hla.hap.demo.
  -Added README.Rmd and README.md files for GitHub.