@@ -12,7 +12,7 @@
 
 <meta name="author" content="Steven J. Mack, PhD – sjmack@chori.org" />
 
-<meta name="date" content="2018-06-27" />
+<meta name="date" content="2018-06-28" />
 
 <title>POULD: Phased Or Unphased Linkage Disequilibrium</title>
 
@@ -32,12 +32,12 @@
 
 <h1 class="title toc-ignore">POULD: Phased Or Unphased Linkage Disequilibrium</h1>
 <h4 class="author"><em>Steven J. Mack, PhD – <a href="mailto:sjmack@chori.org">sjmack@chori.org</a></em></h4>
-<h4 class="date"><em>June 27, 2018</em></h4>
+<h4 class="date"><em>June 28, 2018</em></h4>
 
 
 
 <ul>
-<li>Package Version: 0.6.1.9000</li>
+<li>Package Version: 0.6.2.9000</li>
 </ul>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
